--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -6,7 +6,7 @@
   flex-shrink: 0;
   box-shadow: 1px 0 0 0 var(--bg3);
   border-right: none;
-  z-index: 200;
+  z-index: 1000;
 }
 
 .sidebar-header {
